k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-app
  template:
    metadata:
      labels:
        app: microservices-app
    spec:
      containers:
        - name: microservices-app
          image: aswininigidaveer/microservices-app:latest
          ports:
            - containerPort: 3000
