k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-service
spec:
  type: NodePort
  selector:
    app: microservices-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
